--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,9 +1,22 @@
 <div class="home-intro">
     <div class="jumbo">{{site.heading}}</div>
     <h2>{{site.subheading}}</h2>
-    <div class="home-sub-text"> <h3>
-        Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
-        Check out the <a href="{{'/notes' | relative_url}}"> demo </a>, <a href="{{'/post/features' | relative_url}}"> features </a> and <a href="{{'/post/how-to' | relative_url}}"> how to</a>.
-        </h3> 
-</div> </div>
+    <div class="home-sub-text">
+        <img src="{{ site.baseurl }}/assets/myrrhina-orbit.gif" alt="Myrrhina from Orbit">
+        <h3>Welcome to Myrrhina!</h3>
+        <p>Here you find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
+    </div>
+    <h4>I'm new to D&D</h4>
+    <ul>
+        <li>Start here</li>
+    </ul>
+    <h4>I'm new to West Marches</h4>
+    <ul>
+        <li>Start here</li>
+    </ul>
+    <ul>I'm new to Myrrhina</ul>
+    <ul>
+        <li>Start here</li>
+    </ul>
+</div>
 
