--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -2,7 +2,7 @@
     <div class="jumbo">{{site.heading}}</div>
     <h2>{{site.subheading}}</h2>
     <div class="home-sub-text">
-        <img src="{{ site.baseurl }}/assets/myrrhina-orbit.gif" alt="Myrrhina from Orbit">
+        <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit">
         <h3>Welcome to Myrrhina!</h3>
         <p>Here you find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
     </div>
@@ -14,7 +14,7 @@
     <ul>
         <li>Start here</li>
     </ul>
-    <ul>I'm new to Myrrhina</ul>
+    <h4>I'm new to Myrrhina</h4>
     <ul>
         <li>Start here</li>
     </ul>
