stubbing out some starting pages

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -4,19 +4,10 @@
     <div class="home-sub-text">
         <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit">
         <h3>Welcome to Myrrhina!</h3>
-        <p>Here you find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
+        <p>Here you will find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
     </div>
-    <h4>I'm new to D&D</h4>
-    <ul>
-        <li>Start here</li>
-    </ul>
-    <h4>I'm new to West Marches</h4>
-    <ul>
-        <li>Start here</li>
-    </ul>
-    <h4>I'm new to Myrrhina</h4>
-    <ul>
-        <li>Start here</li>
-    </ul>
+    <h4><a href="{{ site.baseurl }}/dnd">I'm new to D&D</a></h4>
+    <h4><a href="{{ site.baseurl }}/west-marches"></a>I'm new to West Marches</a></h4>
+    <h4><a href="{{ site.baseurl }}/myrrhina"></a>I'm new to Myrrhina</a></h4>
 </div>
 
