--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -7,7 +7,7 @@
         <p>Here you will find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
     </div>
     <h4><a href="{{ site.baseurl }}/dnd">I'm new to D&D</a></h4>
-    <h4><a href="{{ site.baseurl }}/west-marches"></a>I'm new to West Marches</a></h4>
-    <h4><a href="{{ site.baseurl }}/myrrhina"></a>I'm new to Myrrhina</a></h4>
+    <h4><a href="{{ site.baseurl }}/west-marches">I'm new to West Marches</a></h4>
+    <h4><a href="{{ site.baseurl }}/myrrhina">I'm new to Myrrhina</a></h4>
 </div>
 
