more figuring out how to get things to show up

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -6,8 +6,8 @@
         <h3>Welcome to Myrrhina!</h3>
         <p>Here you will find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
     </div>
-    <h4><a href="{{ site.baseurl }}/new-to-dnd">I'm new to D&D</a></h4>
-    <h4><a href="{{ site.baseurl }}/what-is-west-marches">I'm new to West Marches</a></h4>
-    <h4><a href="{{ site.baseurl }}/getting-started">I'm new to Myrrhina</a></h4>
+    <h4><a href="{{ site.baseurl }}/post/new-to-dnd">I'm new to D&D</a></h4>
+    <h4><a href="{{ site.baseurl }}/post/what-is-west-marches">I'm new to West Marches</a></h4>
+    <h4><a href="{{ site.baseurl }}/post/getting-started">I'm new to Myrrhina</a></h4>
 </div>
 
