--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -2,7 +2,7 @@
     <div class="jumbo">{{site.heading}}</div>
     <h2>{{site.subheading}}</h2>
     <div class="home-sub-text">
-        <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit">
+        <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit" style="display: block; margin: 0 auto;">
         <h3>Welcome to Myrrhina!</h3>
         <p>Here you will find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
     </div>
