--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -3,11 +3,28 @@
     <h2>{{site.subheading}}</h2>
     <div class="home-sub-text">
         <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit" style="display: block; margin: 0 auto;">
-        <h3>Welcome to Myrrhina!</h3>
-        <p>Here you will find player documentation about D&D, West Marches, and Myrrhina specifically.</p>
+        <h3>This is Myrrhina</h3>
+        <p>
+            Myrrhina is a world which has just been discovered by your civilization, and colonization has only just begun.
+            A new Adventurer's Guild has been chartered to explore the unknown wilderness surrounding the new colony,
+            and you are a recruit of that Guild.
+        </p>
+        <p>Where will you go? What will you find? Who will you meet? How will you prevail?</p>
+        <p>Join us now as we explore the Mysteries of Myrrhina!</p>
     </div>
-    <h4><a href="{{ site.baseurl }}/note/New-to-D&D">I'm new to D&D</a></h4>
-    <h4><a href="{{ site.baseurl }}/note/What-is-West-Marches">I'm new to West Marches</a></h4>
-    <h4><a href="{{ site.baseurl }}/note/Getting-Started">I'm new to Myrrhina</a></h4>
+    <div>
+        <h4>Oh, where to get started?</h4>
+        <ul>
+            <li>
+                If you're new to D&D, there are a number of good guides that can help you get started.
+                <ul>
+                    <a target="_blank" href="https://www.dndbeyond.com/tag/new-players-guide">D&D Beyond: New Players Guide</a>
+                    <a target="_blank" href="https://www.reddit.com/r/DnD/comments/6w9jcv/5e_comprehensive_startingnew_player_guide/">Reddit: Comprehensive New Player Guide</a>
+                    <a target="_blank" href="https://www.dicebreaker.com/games/dungeons-and-dragons-5e/how-to/how-to-play-dungeons-and-dragons">Dicebreaker: How to play Dungeons & Dragons</a>
+                </ul>
+            </li>
+            <li>If you've played D&D before, but you don't know what West Marches is about, here's an <a href="{{ site.baseurl }}/note/What-is-West-Marches">article</a> we've written to explain this concept.</li>
+            <li>If you've played West Marches already, and just want to jump straight in to the particulars of this game, <a href="{{ site.baseurl }}/note/Getting-Started">we got you covered too!</a></li>
+        </ul>
+    </div>
 </div>
-
