fixing a missing tag and adding quotes

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -3,7 +3,7 @@
     <h2>{{site.subheading}}</h2>
     <div class="home-sub-text">
         <img src="{{ site.baseurl }}/assets/img/myrrhina-orbit.gif" alt="Myrrhina from Orbit" style="display: block; margin: 0 auto;">
-        <h3>This is Myrrhina</h3>
+        <h3 style="text-align: center;">This is Myrrhina</h3>
         <p>
             Myrrhina is a world which has just been discovered by your civilization, and colonization has only just begun.
             A new Adventurer's Guild has been chartered to explore the unknown wilderness surrounding the new colony,
@@ -13,14 +13,14 @@
         <p>Join us now as we explore the Mysteries of Myrrhina!</p>
     </div>
     <div>
-        <h4>Oh, where to get started?</h4>
+        <h4>&ldquo;Ok, where should I start at?&rdquo;</h4>
         <ul>
             <li>
                 If you're new to D&D, there are a number of good guides that can help you get started.
                 <ul>
-                    <a target="_blank" href="https://www.dndbeyond.com/tag/new-players-guide">D&D Beyond: New Players Guide</a>
-                    <a target="_blank" href="https://www.reddit.com/r/DnD/comments/6w9jcv/5e_comprehensive_startingnew_player_guide/">Reddit: Comprehensive New Player Guide</a>
-                    <a target="_blank" href="https://www.dicebreaker.com/games/dungeons-and-dragons-5e/how-to/how-to-play-dungeons-and-dragons">Dicebreaker: How to play Dungeons & Dragons</a>
+                    <li><a target="_blank" href="https://www.dndbeyond.com/tag/new-players-guide">D&D Beyond: New Players Guide</a></li>
+                    <li><a target="_blank" href="https://www.reddit.com/r/DnD/comments/6w9jcv/5e_comprehensive_startingnew_player_guide/">Reddit: Comprehensive New Player Guide</a></li>
+                    <li><a target="_blank" href="https://www.dicebreaker.com/games/dungeons-and-dragons-5e/how-to/how-to-play-dungeons-and-dragons">Dicebreaker: How to play Dungeons & Dragons</a></li>
                 </ul>
             </li>
             <li>If you've played D&D before, but you don't know what West Marches is about, here's an <a href="{{ site.baseurl }}/note/What-is-West-Marches">article</a> we've written to explain this concept.</li>
