embedding google sheet

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -23,8 +23,8 @@
                     <li><a target="_blank" href="https://www.dicebreaker.com/games/dungeons-and-dragons-5e/how-to/how-to-play-dungeons-and-dragons">Dicebreaker: How to play Dungeons & Dragons</a></li>
                 </ul>
             </li>
-            <li>If you've played D&D before, but you don't know what West Marches is about, here's an <a href="{{ site.baseurl }}/note/What-is-West-Marches">article</a> we've written to explain this concept.</li>
-            <li>If you've played West Marches already, and just want to jump straight in to the particulars of this game, <a href="{{ site.baseurl }}/note/Getting-Started">we got you covered too!</a></li>
+            <li>If you've played D&D before, but you don't know what West Marches is about, here's an <a href="{{ site.baseurl }}/west-marches">article</a> we've written to explain this concept.</li>
+            <li>If you've played West Marches already, and just want to jump straight in to the particulars of this game, <a href="{{ site.baseurl }}/getting-started">we got you covered too!</a></li>
         </ul>
     </div>
 </div>
