--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -76,18 +76,25 @@
             <!-- Homepage Layout-->
             {%- if page.permalink == "/" -%}
             <div class="column is-8-widescreen  is-8-desktop is-8-tablet is-12-mobile">
-                    {%- if site.preferences.homepage.enabled -%}
-                            <!--- Show Homepage -->
-                            {%- include Homepage.html -%}
-                    {%- else -%}
-                            <!--- Show Feed Part -->
-                <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
-                            <h5 class="meta-title"><a href="/myrrhina">← Home</a></h5>
-                            <div class="jumbo">{{page.title}}</div>
-                            {%- include FeedContent.html -%}
-                            {%- include Feed.html -%}
-                </div>
-                    {%- endif -%}
+                {%- if site.preferences.homepage.enabled -%}
+                    <!--- Show Homepage -->
+                    {%- if site.preferences.homepage.custom -%}
+                        {%- include Homepage.html -%}
+                        {%- else -%}
+                            <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
+                                <div class="jumbo">{{page.title}}</div>
+                                {%- include Content.html -%}
+                            </div>
+                        {%- endif -%}
+                {%- else -%}
+                    <!--- Show Feed Part -->
+                    <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
+                        <h5 class="meta-title"><a href="/myrrhina">← Home</a></h5>
+                        <div class="jumbo">{{page.title}}</div>
+                        {%- include Content.html -%}
+                        {%- include Feed.html -%}
+                    </div>
+                {%- endif -%}
             </div>
             {%- endif -%}
 
@@ -95,9 +102,9 @@
             {%- if page.feedformat -%}
             <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
                 <h5 class="meta-title"><a href="/myrrhina">← Home</a></h5>
-                    <div class="jumbo">{{page.title}}</div>
-                    {%- include Content.html -%}
-                    {%- include Feed.html -%}
+                <div class="jumbo">{{page.title}}</div>
+                {%- include Content.html -%}
+                {%- include Feed.html -%}
             {%- endif -%}
 
             <!--- Notes Layout-->
