--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -80,6 +80,11 @@
                     <!--- Show Homepage -->
                     {%- if site.preferences.homepage.custom -%}
                         {%- include Homepage.html -%}
+                    {%- else -%}
+                        <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
+                            <div class="jumbo">{{page.title}}</div>
+                            {%- include Content.html -%}
+                        </div>
                     {%- endif -%}
                 {%- else -%}
                     <!--- Show Feed Part -->
@@ -136,45 +141,45 @@
             <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
                 <h5 class="meta-title"><a href="/myrrhina">← Home</a></h5>
                 <div class="jumbo">{{page.title}}</div>
-                    {%- include Content.html -%}
-                    {% for post in site.posts %}
-                        <div class="list-feed"> 
+                {%- include Content.html -%}
+                {% for post in site.posts %}
+                    <div class="list-feed"> 
                         <a href="{{ site.baseurl }}{{post.url}}" style="text-decoration: none;display: flex;justify-content: space-between;flex-direction: row;width: 100%;">
                             <div class="writinglist-title">{{post.title }}</div>
                         </a>
-                        </div>
-                    {%- endfor -%}
+                    </div>
+                {%- endfor -%}
             </div> 
 
             <ul>
                 
             {%- endif -%}
 
-             <!--- Post Layout-->
-             {%- if page.content-type == "post"  -%}
-             <div class="column is-5-widescreen  is-6-desktop is-8-tablet is-12-mobile">
-                     <div class="note-page-section">
-                         <div>
-                             {%- if site.preferences.homepage.enabled -%}
-                             <a onclick="window.history.back();">
-                             {%- else -%}
-                             <a onclick="window.location.assign('/myrrhina');">
-                             {%- endif -%}
-                                     <h5 class="meta-title">← BACK</h5>
-                             </a>
-                         </div>
-                     <h1>{{page.title}}</h1>
-                     {%- include Content.html -%}
-                     {%- include Backlinks.html -%}
-                     </div>
-             </div>
-             {%- endif -%}
+            <!--- Post Layout-->
+            {%- if page.content-type == "post" and page.permalink != "/"  -%}
+            <div class="column is-5-widescreen  is-6-desktop is-8-tablet is-12-mobile">
+                <div class="note-page-section">
+                    <div>
+                        {%- if site.preferences.homepage.enabled -%}
+                        <a onclick="window.history.back();">
+                        {%- else -%}
+                        <a onclick="window.location.assign('/myrrhina');">
+                        {%- endif -%}
+                                <h5 class="meta-title">← BACK</h5>
+                        </a>
+                    </div>
+                <h1>{{page.title}}</h1>
+                {%- include Content.html -%}
+                {%- include Backlinks.html -%}
+                </div>
+            </div>
+            {%- endif -%}
 
             <!--- Static Page Layout-->
             {%- if page.content-type == "static" -%}
-            <div class="column is-5-widescreen  is-6-desktop is-8-tablet is-12-mobile">
-                        <div class="jumbo">{{page.title}}</div>                        
-                        {%- include Content.html -%}
+                <div class="column is-5-widescreen  is-6-desktop is-8-tablet is-12-mobile">
+                    <div class="jumbo">{{page.title}}</div>                        
+                    {%- include Content.html -%}
                 </div>
             {%- endif -%}
         </div>
