--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -108,7 +108,7 @@
             {%- endif -%}
 
             <!--- Notes Layout-->
-            {%- if page.content-type == "notes" -%}
+            {%- if page.content-type == "notes" and page.permalink != "/" -%}
             <div class="column is-5-widescreen  is-6-desktop is-8-tablet is-12-mobile">
                     <div class="note-page-section">
                         <div>
