still tweaking things

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -72,6 +72,7 @@
     {%- include Nav.html -%}
     <section class="section">
         <div class="columns is-centered">
+            <!-- PAGE TYPE: {{page.type}} -->
 
             <!-- Homepage Layout-->
             {%- if page.permalink == "/" -%}
