--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -35,21 +35,44 @@
     {%- if site.preferences.wiki_style_link.enabled -%}
         {%- assign content_array = content | split:'[[' -%}
         {%- assign external_link_delimiter = '::' -%}
+        {%- assign internal_link_delimiter = '|' -%}
+        {%- assign internal_header_delimiter = '#' -%}
 
         {%- assign link_joiner_delimiter = '$@' -%}
         {%- for item in content_array -%}
             {%- if forloop.index > 1 -%}
                 {%- assign itemparts = item | split:']]' -%}
-                {%- assign internal_link = itemparts[0] -%}
-                {%- assign external_link = itemparts[0] | split:external_link_delimiter -%}
-                {%- assign sidenote = itemparts[0] | split:sidenote_delimiter -%}
+                {%- assign itempart = itemparts[0] | split:internal_link_delimiter- %}
+                {%- assign alt_link = itempart[1] -%}
+
+                {%- assign itemparts = itempart[0] | split:internal_header_delimiter -%}
+                {%- assign itempart = itemparts[0] -%}
+                {%- assign header_link = itemparts[1] -%}
+
+                {%- assign internal_link = itempart -%}
+                {%- assign external_link = itempart | split:external_link_delimiter -%}
+                {%- assign sidenote = itempart | split:sidenote_delimiter -%}
             
                 {%- if external_link[1] == nil -%}
-                    {%- assign result_posts = site.posts | where: 'title',itemparts[0] -%}  
-                    {%- assign result_posts = site.notes | where: 'title',itemparts[0] -%}
-                    {%- assign result_pages = site.pages | where: 'title',itemparts[0] -%}
-                    {%- assign internal_links = internal_links | append: link_joiner_delimiter | append: internal_link -%}
-                    {%- assign internal_urls = internal_urls | append: link_joiner_delimiter | append: result_posts[0].url | append: result_pages[0].url -%}
+                    {%- if internal_link -%}
+                        {%- assign result_posts = site.posts | where: 'title',internal_link -%}  
+                        {%- assign result_posts = site.notes | where: 'title',internal_link -%}
+                        {%- assign result_pages = site.pages | where: 'title',internal_link -%}
+                        {%- assign internal_links = internal_links | append: link_joiner_delimiter | append: internal_link -%}
+                        {%- assign internal_urls = internal_urls | append: link_joiner_delimiter | append: result_posts[0].url | append: result_pages[0].url -%}
+                    {%- endif -%}
+
+                    {%- if alt_link -%}
+                        {%- assign internal_links_alt = internal_links_alt | append: link_joiner_delimiter | append: internal_link -%}
+                        {%- assign internal_urls_alt = internal_urls_alt | append: link_joiner_delimiter | append: result_notes[0].url | append: result_posts[0].url | append: result_pages[0].url -%}
+                        {%- assign internal_titles_alt = internal_titles_alt | append: link_joiner_delimiter | append: alt_link -%}
+
+                        {%- if header_link -%}
+                            {%- assign header_links = header_links | append: link_joiner_delimiter | append: header_link -%}
+                        {%- else -%}
+                            {%- assign header_links = header_links | append: link_joiner_delimiter | append: "noheader" -%}
+                        {%- endif -%}
+                    {%- endif -%}
                 {%- else -%}
                     {%- assign external_links = external_links | append: link_joiner_delimiter | append: external_link[0] -%}
                     {%- assign external_urls = external_urls | append: link_joiner_delimiter | append: external_link[1] -%}
@@ -65,6 +88,7 @@
 
     
         {%- assign replaced_content = content -%}
+
         {%- for title in internal_link_array -%}
             {%- assign url = internal_url_array[forloop.index0] -%}
             {%- if url == nil -%}
@@ -85,6 +109,44 @@
             {%- endif -%}
             {%- assign bracket_link = '[[' | append: title | append: ']]' -%}
             {%- assign replaced_content = replaced_content | replace: bracket_link,link_text -%}
+        {%- endfor -%}
+
+        {%- assign internal_url_alt_array = internal_urls_alt | split:link_joiner_delimiter -%}
+        {%- assign internal_link_alt_array = internal_links_alt | split:link_joiner_delimiter -%}
+        {%- assign internal_titles_alt_array = internal_titles_alt | split:link_joiner_delimiter -%}
+
+        {%- for title in internal_link_alt_array -%}
+            {%- assign url = internal_url_alt_array[forloop.index0] -%}
+            {%- assign alt_title = internal_titles_alt_array[forloop.index0] -%}
+            {%- assign header_title = header_link_array[forloop.index0] -%}
+
+            {%- if url == nil -%}
+                {%- assign link_text = '<a style="background-color:#ffffc4;" href="' | append: 'javascript:void(0)' | append: '">' | append: alt_title | append: '</a>' -%}
+            {%- elsif url == empty -%}
+                {%- assign link_text = '<a style="background-color:#ffffc4;" href="' | append: 'javascript:void(0)' | append: '">' | append: alt_title | append: '</a>' -%}
+            {%- elsif header_title == "noheader" -%}
+                {%- assign post = site.notes | where: 'title',title -%}
+                {%- assign excerpt = post[0].content | markdownify | strip_html | truncate: 500 | newline_to_br -%}
+                {%- assign link_text = '<span class="tooltip"><a href="' | append: url | append: '">' | append: alt_title | append: '</a><span class="right bottom"><span class="tooltip-title">' | append: post[0].title | append: '</span><br/><span class="tooltip-excerpt">' | append: excerpt | append: '</span><i></i></span></span>' -%}
+
+                {%- assign bracket_link = '[[' | append: title |  append: '|' | append: alt_title | append: ']]' -%}
+                {%- assign replaced_content = replaced_content | replace: bracket_link, link_text -%}
+            {%- else  -%}
+                {%- assign header_correct_link = header_title | replace: " ", "-" | downcase -%}
+                {%- assign post = site.notes | where: 'title',title -%}
+                {%- assign excerpt = post[0].content | markdownify | strip_html | truncate: 500 | newline_to_br -%}
+                {%- assign link_text = '<span class="tooltip"><a href="' | append: url | append: '#' | append: header_correct_link | append: '">' | append: alt_title | append: '</a><span class="right bottom"><span class="tooltip-title">' | append: post[0].title | append: '</span><br/><span class="tooltip-excerpt">' | append: excerpt | append: '</span><i></i></span></span>' -%}
+                {%- assign bracket_link = '[[' | append: title | append: "#" | append: header_title |  append: '|' | append: alt_title | append: ']]' -%}
+                {%- assign replaced_content = replaced_content | replace: bracket_link, link_text -%}
+            {%- endif -%}
+
+            {%- if header_title == "noheader" -%}
+                {%- assign bracket_link = '[[' | append: title |  append: '|' | append: alt_title | append: ']]' -%}
+                {%- assign replaced_content = replaced_content | replace: bracket_link, link_text -%}
+            {%- else -%}
+                {%- assign bracket_link = '[[' | append: title | append: "#" | append: header_title |  append: '|' | append: alt_title | append: ']]' -%}
+                {%- assign replaced_content = replaced_content | replace: bracket_link, link_text -%}
+            {%- endif -%}
         {%- endfor -%}
 
         {%- assign sideNoteCounter = 0 -%}
