--- a/_includes/Backlinks.html
+++ b/_includes/Backlinks.html
@@ -30,65 +30,74 @@
 {%- endcomment -%}
 
 <!-- Add backlinks to the current page --> 
-{%- assign link_count = 0 -%}
+{%- assign note_link_count = 0 -%}
+{%- assign page_link_count = 0 -%}
+{%- assign post_link_count = 0 -%}
+{%- assign total_link_count = 0 -%}
 {%- assign wiki_link_title = '[' | append: page.title | append: ']' -%}
+
 {%- for note in site.notes -%}
-        {%- if note.url != page.url -%}
-            {%- if note.content contains wiki_link_title -%}
-                {%- assign link_count = link_count | plus:1 -%}
-            {%- endif -%}
+    {%- if note.url != page.url -%}
+        {%- if note.content contains wiki_link_title -%}
+            {%- assign note_link_count = note_link_count | plus:1 -%}
+        {%- endif -%}
     {%- endif -%}
 {%- endfor -%}
+
 {%- for note in site.posts -%}
-        {%- if note.url != page.url -%}
-            {%- if note.content contains wiki_link_title -%}
-                {%- assign link_count = link_count | plus:1 -%}
-            {%- endif -%}
+    {%- if note.url != page.url -%}
+        {%- if note.content contains wiki_link_title -%}
+            {%- assign post_link_count = post_link_count | plus:1 -%}
+        {%- endif -%}
     {%- endif -%}
 {%- endfor -%}
+
 {%- for note in site.pages -%}
-        {%- if note.url != page.url -%}
-            {%- if note.content contains wiki_link_title -%}
-                {%- assign link_count = link_count | plus:1 -%}
-            {%- endif -%}
+    {%- if note.url != page.url -%}
+        {%- if note.content contains wiki_link_title -%}
+            {%- assign page_link_count = page_link_count | plus:1 -%}
+        {%- endif -%}
     {%- endif -%}
 {%- endfor -%}
-{%- if link_count > 0 -%}
-{%- assign wiki_link_title = '[' | append: page.title | append: ']' -%}
-{%- assign display_class = 'hide' -%}
-{%- if site.preferences.backlinks.enabled -%}
-{%- assign display_class = 'show' -%}
-{%- endif -%}
-<div class="related {{display_class}}" id="jekyll-seamless-backlinks">
-    <h5 class="meta-title centre-title">Links to this note</h5>
-    <div class="related-wrapper">
-        {%- for note in site.notes -%}
-        {%- if note.url != page.url -%}
-            {%- if note.content contains wiki_link_title -%}
-            <div class="related-group"><a href="{{ site.baseurl }}{{note.url}}">
-                <h6>{{ note.title }}</h6>
-                <p class="excerpt" style="margin: 0px; color: var(--color-text-main) !important;">{{ note.content | strip_html | strip | remove: "[[" | remove: "]]" | remove: "-" | escape | truncate: 100 }}</p>
-            </a></div>
-            {%- endif -%}
-        {%- endif -%}
-        {%- endfor -%}
-        <!--
-        This code is to show other pages (note under collection) as Backlink. 
-        Disabled as I don't see a need for this right now. 
 
-        {%- for note in site.pages -%}
-        {%- if note.url != page.url -%}
-            {%- if note.content contains wiki_link_title -%}
-            <div class="related-group"><a href="{{note.url}}">
-                <h6>{{ note.title }}</h6>
-                <p class="excerpt" style="margin: 0px;">{{ note.content | strip_html | strip | remove: "[[" | remove: "]]" | escape | truncate: 100 }}</p>
-            </a></div>
-            {%- endif -%}
-        {%- endif -%}
-        {%- endfor -%}
+{%- assign total_link_count = page_link_count | plus:note_link_count | plus:page_link_count -%}
 
-        -->
+{%- if total_link_count > 0 -%}
+    {%- assign wiki_link_title = '[' | append: page.title | append: ']' -%}
+    {%- assign display_class = 'hide' -%}
+    {%- if site.preferences.backlinks.enabled -%}
+        {%- assign display_class = 'show' -%}
+    {%- endif -%}
+    <div class="related {{display_class}}" id="jekyll-seamless-backlinks">
+        <h5 class="meta-title centre-title">Links to this note</h5>
+        <div class="related-wrapper">
+            {%- for note in site.notes -%}
+                {%- if note.url != page.url -%}
+                    {%- if note.content contains wiki_link_title -%}
+                        <div class="related-group"><a href="{{ site.baseurl }}{{note.url}}">
+                            <h6>{{ note.title }}</h6>
+                            <p class="excerpt" style="margin: 0px; color: var(--color-text-main) !important;">{{ note.content | strip_html | strip | remove: "[[" | remove: "]]" | remove: "-" | escape | truncate: 100 }}</p>
+                        </a></div>
+                    {%- endif -%}
+                {%- endif -%}
+            {%- endfor -%}
+            
+            <!--
+                This code is to show other pages (note under collection) as Backlink. 
+                Disabled as I don't see a need for this right now.
+            -->
+
+            {%- for note in site.pages -%}
+                {%- if note.url != page.url -%}
+                    {%- if note.content contains wiki_link_title -%}
+                        <div class="related-group"><a href="{{note.url}}">
+                            <h6>{{ note.title }}</h6>
+                            <p class="excerpt" style="margin: 0px;">{{ note.content | strip_html | strip | remove: "[[" | remove: "]]" | escape | truncate: 100 }}</p>
+                        </a></div>
+                    {%- endif -%}
+                {%- endif -%}
+            {%- endfor -%}
+        </div>
+        <br/>
     </div>
-    <br/>
-</div>
 {%- endif -%}
