--- a/_includes/Backlinks.html
+++ b/_includes/Backlinks.html
@@ -90,7 +90,7 @@
             {%- for note in site.pages -%}
                 {%- if note.url != page.url -%}
                     {%- if note.content contains wiki_link_title -%}
-                        <div class="related-group"><a href="{{note.url}}">
+                        <div class="related-group"><a href="{{ site.baseurl }}{{note.url}}">
                             <h6>{{ note.title }}</h6>
                             <p class="excerpt" style="margin: 0px;">{{ note.content | strip_html | strip | remove: "[[" | remove: "]]" | escape | truncate: 100 }}</p>
                         </a></div>
